app/assets/stylesheets/_homepage.css.scss
@import 'home/meet_community';

body.home .nav-custom {
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.BV-cover {
  background: linear-gradient(
    rgba(45, 45, 45, 0.37),
    rgba(45, 45, 45, 0.37)
  ),
  image-url("doglow.jpg") no-repeat center center;
  background-size: cover !important;
  display: block !important;
  width: 100%;
}

.splace {
  @media (min-width: $screen-md-min) {
    padding-top:75px;
  }

  @media (max-width: $screen-xs-max) {
    padding-top:100px;
  }
}

.jumbotron {
  background: linear-gradient(
    rgba(45, 45, 45, 0.37),
    rgba(45, 45, 45, 0.37)
  ),
  image-url("doglow.jpg") no-repeat center center;
  background-size: cover;
  color: #fff;
  display: block;
  height: 100vh;
  margin-bottom: 0px;
  min-height: 700px;
  text-align: center;
  text-shadow: black 0.03em 0.03em 0.03em;
  width: 100%;
}

.jumbotron h1 {
  margin: 50px 0 0.7em 0;

  #line-breaker {
    display: none;
  }
}

.jumbotron h3,.jumbotron h4{
  margin-top: 100px;
}

.search-form {
  background-color: rgba(57,60,61,0.5);
  display: inline-block;
  margin: 0px auto;
  padding: 13px;
}

#drop-off input,
#pick-up input {
  width: 155px;
}

#search-btn {
  border-radius: 4px;
  height: 46px;
  width: 7em;
}

.highlights {
  margin-top: 7em;
  text-shadow: none;

  .highlight {
    display: inline-block;
    margin-left: 5%;
  }

  span {
    display: block;
    &.cover {}
  }

  img, .icon {
    margin-bottom: 0.5em;
  }

  .icon {
    &.peace strong {
      font-size: 37px;
    }

    &.percent {
      margin-bottom: -0.1em;
      font-size: 50px;
    }
  }
}

.press-coverage {
  background: $grey-dark;
  height: 110px;
  padding-top: 20px;

  .row {
    text-align: center;

    img {
      display: inline-block;
      margin: 0 2%;
    }
  }
}

#why-phs h2,
.three-steps h2,
.meet-community h2 {
  font-size: 35px;
  margin-top: 50px;
}

.three-steps {
  background-color: #fff;

  .row {
    padding-bottom: 25px;
  }

  img {
    display: block;
    margin: 15px auto;
    width: 130px;
  }

  .steps {
    padding-left: 3em;
    padding-right: 3em;
  }
}

#why-phs {
  background-color: rgb(247, 247, 247);
}

#why-phs h3 {
  margin-top: 55px;
}

#first-row {
  margin-top: 70px;
}

#last-row {
  margin-bottom: 70px;
}

section.bottom-search {
  background-color: rgb(93, 193, 191);
  padding: 50px 0;

  h3 {
    color: #fff;
    margin: 0 0 16px;
  }
}

#postcode, #join-our-amazing-community .form-group {
  width: 370px;
}

#postcode .input-group, #join-our-amazing-community .form-group .input-group {
  width: 100%;
}

section#map {
  padding: 50px 0;

  h2 {
    margin-top: 0;
  }

  img {
    display: block;
    height: 300px;
    padding: 0;
  }
}

@media (max-width: $screen-sm-max) {
  .jumbotron {
    height: auto;
    min-height: 600px;

    h1 {
      font-size: 48px;
      margin: 70px 0 50px;
    }

    h4 {
      margin-top: 50px;
    }
  }

  #postcode, section#join-our-amazing-community .form-group {
    display: block;
    min-width: 350px;
  }

  section#join-our-amazing-community .form-group {
    margin-bottom: 0;
  }

  #postcode .input-group, section#join-our-amazing-community .form-group .input-group {
    width: 100%;
  }

  #search-btn, section#join-our-amazing-community form.search-form button {
    display: block;
    width: 100%;
  }

  section#join-our-amazing-community form.search-form button {
    margin-top: 5px;
  }

  #postcode, #drop-off, #pick-up {
    margin-bottom: 5px;
  }

  .highlights {
    margin-top: 4.5em;
  }
}

@media (max-width: $screen-xs-max) {
  .jumbotron {
    min-height: 500px;

    h1 {
      font-size: 36px;
    }
  }

  section.meet-community {
    .carousel-caption {
      bottom: 20%;
    }

    .carousel-indicators {
      bottom: 40px;
    }
  }

  #drop-off input, #pick-up input {
    display: block;
    width: 100%;
  }

  #why-phs {
    h3 {
      margin-top: 10px;
    }

    img {
      width: 180px;
    }
  }
}

@media (max-width: 500px) {
  .bg {
    background-size: 1000px 100%;
  }

  .jumbotron {
    padding-left:  0;
    padding-right: 0;

    h1 {
      font-size: 30px;
    }

    .highlights {
      margin-top: 15px;
    }
  }

  #why-phs {
    img {
      width: 100px;
    }

    #first-row {
      margin-top: 30px;
    }

    #last-row {
      margin-bottom: 30px;
    }
  }

  .meet-community .story .caption {
    left: 25%;
  }

  section#join-our-amazing-community h5 {
    display: none;
  }
}

// iPhone horizontal
@media only screen and (min-width: 480px) and (max-width: 766px) {
  .jumbotron{
    h1 {
      font-size: 30px;
      margin-top: 5px;
    }

    #drop-off {
      display: inline-block;
      float: left;
      width: 50%;
    }
  }
}

// iPad horizontal
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
  .jumbotron h1 #line-breaker {
    display: inline;
  }
}

